--- a/.about.yml
+++ b/.about.yml
@@ -11,11 +11,12 @@ full_name: Laptop Script
 # values: app, docs, policy
 type: app
 
-# Describes whether a project team, working group/guild, etc. owns the repo (required)
-# values: guild, working-group, project
+# Describes whether a project team, working group/guild, etc. owns the
+# repo (required) values: guild, working-group, project
 owner_type: project
 
-# Name of the main project repo if this is a sub-repo; name of the working group/guild repo if this is a working group/guild subproject
+# Name of the main project repo if this is a sub-repo; name of the working
+# group/guild repo if this is a working group/guild subproject
 # parent:
 
 # Maturity stage of the project (required)
@@ -29,7 +30,7 @@ description: >
 
 # Tags that describe the project or aspects of the project
 tags:
-- automation
+  - automation
 
 # Should be 'true' if the project has a continuous build (required)
 # values: true, false
@@ -41,12 +42,12 @@ testable: true
 #   id: Internal team identifier/user name
 #   role: Team member's role; leads should be designated as 'lead'
 team:
-- github: monfresh
-  id: Moncef Belyamani
-  role: lead
-- github: afeld
-  id: Aidan Feldman
-  role: developer
+  - github: monfresh
+    id: Moncef Belyamani
+    role: lead
+  - github: afeld
+    id: Aidan Feldman
+    role: developer
 
 # Partners for whom the project is developed
 # partners:
@@ -65,7 +66,7 @@ team:
 
 # Technologies used to build the project
 stack:
-- Bash
+  - Bash
 
 # Brief description of the project's outcomes
 impact: >
@@ -79,15 +80,16 @@ impact: >
 #   url: URL for detailed information
 #   badge: URL for the status badge
 services:
-- name: Circle CI
-  category: Continous integration
-  url: https://circleci.com/gh/18F/laptop
-  badge: https://circleci.com/gh/18F/laptop.svg
+  - name: Circle CI
+    category: Continous integration
+    url: https://circleci.com/gh/18F/laptop
+    badge: https://circleci.com/gh/18F/laptop.svg
 
 # Licenses that apply to the project and/or its components (required)
 # Items by property name pattern:
 #   .*:
-#     name: Name of the license from the Software Package Data Exchange (SPDX): https://spdx.org/licenses/
+#     name: Name of the license from the Software Package Data Exchange (SPDX):
+#           https://spdx.org/licenses/
 #     url: URL for the text of the license
 licenses:
   thoughtbot-laptop:
